feat(DATA-2110): handle SX inbound subscription filtering by network ref, operator ref and/or line ref(s)